--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,10 @@ h1 {
   margin-bottom: 1rem;
 }
 
+.edit:hover{
+	color: blue;
+	transition: color 300ms ease-in-out;
+}
 .fa-trash {
   margin-left: 0.75rem;
 }
